# functional-ddd-note-app

./: Cargo.toml  Makefile  README.md  database.sqlite3  http.http  init.sql
http/: note_api.http  user_api.http
migration/: init.sql
src/: dependency.rs  domain.rs  main.rs  resolver.rs
src/adaptor/: error_response.rs  handlers.rs  mod.rs
src/adaptor/controllers/: error_response.rs  mod.rs  note_handlers.rs  user_handlers.rs
src/adaptor/gateways/: mod.rs  note_repository.rs  user_repository.rs
src/domain/: mod.rs  note.rs  user.rs  workflow.rs
src/domain/note/: command.rs  core.rs  error.rs  id.rs  mod.rs  note.rs  workflow.rs
src/domain/user/: command.rs  core.rs  dependency.rs  error.rs  id.rs  mod.rs  user.rs  workflow.rs
