[package]
name = "functional-ddd-es"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5" }
hyper = "0.14"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
rusqlite = "0.31.0"
once_cell = "1.19.0"
thiserror = "1.0.62"